--- a/filme-trolls/filme.css
+++ b/filme-trolls/filme.css
@@ -8,7 +8,7 @@ body {
     background-repeat: no-repeat;
     height: 331vh;
     color: rgb(215, 230, 235);
-    font-family: 'Helvetica', sans-serif; /* Fonte para os títulos */
+    font-family: 'Helvetica', sans-serif; 
     font-size: 24px;
 }
 
